<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:id="@+id/dialog_container"
    android:padding="@dimen/_10sdp">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClose"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="end"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_close"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/_20sdp"
        android:backgroundTint="@color/transparent"
        android:background="@color/transparent"
        app:backgroundTint="@color/transparent"
        app:iconTint="@color/white" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:text="@string/set_wallpaper_as"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnSetHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_wallpaper_home"
        app:backgroundTint="@color/transparent"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_20sdp"
        android:textSize="@dimen/button_text_size"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnSetLockScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_wallpaper_lock"
        app:backgroundTint="@color/transparent"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_20sdp"
        android:textSize="@dimen/button_text_size"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/btnSetASBoth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_wallpaper_both"
        app:backgroundTint="@color/colorAccent"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/_20sdp"
        android:textSize="@dimen/button_text_size"
        android:layout_marginTop="@dimen/_10sdp"/>
</LinearLayout>