<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="Title"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNegative"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/cancel"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_11ssp"
                app:backgroundTint="@color/transparent"
                app:strokeColor="@color/transparent"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPositive"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:padding="0dp"
                android:text="@string/confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>